fix: contrast colors

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -12,7 +12,7 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(70.22% 0.1431 176.8);
-  --primary-foreground: oklch(1 0 0);
+  --primary-foreground: oklch(0.145 0 0);
   --secondary: oklch(64.24% 0.1431 227);
   --secondary-foreground: oklch(0.97 0 0);
   --muted: oklch(0.97 0 0);
@@ -54,7 +54,7 @@
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.856 0 0);
   --accent: oklch(90.58% 0.1431 184.23);
-  --accent-foreground: oklch(0.985 0 0);
+  --accent-foreground: oklch(0.145 0 0);
   --destructive: oklch(0.396 0.141 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
   --border: oklch(0.269 0 0);
